# weather-impression

./: .gitignore  LICENSE  MANUAL_INSTALL.md  README.md  config.txt.default  install.sh  pyproject.toml  setup.sh  test.py  updateConfig.py  watcher.py  weather.py  weather_graph.py
.github/: FUNDING.yml
src/: config.py  constants.py  display.py  renderer.py  weather_api.py  weather_data.py
tests/: conftest.py  test_config.py  test_constants.py  test_renderer.py  test_weather_api.py  test_weather_data.py
