[project]
name = "weather-impression"
version = "2.0.0"
description = "Weather station for PIMORONI Inky Impression (5.7\")"
requires-python = ">=3.11"
dependencies = [
    "inky",
    "Pillow",
    "numpy",
    "matplotlib",
    "gpiod>=2",
    "schedule",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
